fixed set spacing problem in music catalog

--- a/stylesheets/results.css
+++ b/stylesheets/results.css
@@ -146,7 +146,7 @@ div#catalogueContainer{
   
 .set h4, .encore h4 {
   position: relative;
-  top: 5px;
+  top: 2px;
   }
   
   
@@ -158,8 +158,8 @@ div#catalogueContainer{
 .songs {
   position: relative;
   top: 1px;
-  height: 20px;
-  margin-bottom: 10px;
+  min-height: 20px;
+  margin-bottom: 5px;
 }
   
 .song {
